30-June-2011 Michael Babker Version 1.8 Changes
~ Rename the layouts for the HTML view

30-June-2011 Michael Babker Version 1.7 Changes
# Correct the installation SQL with the summary changes

29-June-2011 Michael Babker Version 1.8 Changes
+ Add a feed listing module

29-June-2011 Michael Babker Version 1.7 Changes
# Modified podcast summary field to allow up to 5120 characters
# Fixed storage bug with itunescategory field

28-June-2011 Michael Babker Version 1.8 Changes
# Joomla! 1.6.4 security fix
+ Added pagination to list layout
+ Added feed link to head
- Removed params conversion in getItems
+ Add support for Akeeba Backup System Restore Points
~ Update getID3 library to 1.9.0

28-June-2011 Michael Babker Version 1.7 Changes
# Correct counts for feeds view
# Fix media installer

22-June-2011 Michael Babker Version 1.8 Changes
+ Added JHtmlIcon helper for front end
~ Made consistent JEXEC checks
# Changed com_podcastmedia to delete menus on postflight (again)
+ Add PodcastManagerHelperRoute

20-June-2011 Michael Babker Version 1.8 Changes
+ Rough addition of front end HTML view for feeds
~ Cleanup of the HTML view

19-June-2011 Michael Babker Version 1.7 Changes
~ Optimize media manager navigation for Joomla! 1.7
# Add a missing language string for the File Manager
~ Convert toolbar tasks from JToolBarHelper::custom to defined tasks as appropriate
~ Add a check to the scriptfiles for Joomla! 1.7
~ Mark the XML files for Joomla! 1.7
- Removed the Hathor media view override
# Corrected the Hathor overrides update check
~ Syncronized core layouts to current Joomla! SVN
~ Updated PodcastManagerModelFeeds to use modified methods from MenusModelMenus