@@ -90,6 +90,8 @@ COM_PODCASTMANAGER_HEADING_TRASHED_ITEMS="# Trashed"
 COM_PODCASTMANAGER_HEADING_UNPUBLISHED_ITEMS="# Unpublished"
 COM_PODCASTMANAGER_LIMIT_DESCRIPTION="Enter an optional limit to the number of episodes to display with the feed.  <b>IMPORTANT</b> - It is HIGHLY recommended that you use no limit for the feed submitted to iTunes as items will not feed properly."
 COM_PODCASTMANAGER_LIMIT_LABEL="# of Items"
+COM_PODCASTMANAGER_MENU_FEEDNAME_DESCRIPTION="The feed this menu item is linked to."
+COM_PODCASTMANAGER_MENU_FEEDNAME_LABEL="Feed"
 COM_PODCASTMANAGER_N_ITEMS_CHECKED_IN_0="No podcast successfully checked in"
 COM_PODCASTMANAGER_N_ITEMS_CHECKED_IN_1="%d podcast successfully checked in"
 COM_PODCASTMANAGER_N_ITEMS_CHECKED_IN_MORE="%d podcasts successfully checked in"
