@@ -4,8 +4,12 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 COM_PODCASTMANAGER="Podcast Manager"
-COM_PODCASTMANAGER_FEED_VIEW_DESCRIPTION="The RSS feed for the podcast stream"
-COM_PODCASTMANAGER_FEED_VIEW_TITLE="Feed"
+COM_PODCASTMANAGER_FEED_HTML_VIEW_DESCRIPTION="A page which lists episodes in a podcast feed."
+COM_PODCASTMANAGER_FEED_HTML_VIEW_OPTION="Feed Listing"
+COM_PODCASTMANAGER_FEED_HTML_VIEW_TITLE="Feed Listing"
+COM_PODCASTMANAGER_FEED_RAW_VIEW_DESCRIPTION="A RSS feed of a selected podcast feed."
+COM_PODCASTMANAGER_FEED_RAW_VIEW_OPTION="RSS Feed"
+COM_PODCASTMANAGER_FEED_RAW_VIEW_TITLE="RSS Feed"
 COM_PODCASTMANAGER_SUBMENU_FEEDS="Feeds"
 COM_PODCASTMANAGER_SUBMENU_FILES="File Manager"
 COM_PODCASTMANAGER_SUBMENU_INFO="Information"
