@@ -1,5 +1,6 @@
 30-June-2011 Michael Babker Version 1.8 Changes
 ~ Rename the layouts for the HTML view
+~ Language strings for various menu components
 
 30-June-2011 Michael Babker Version 1.7 Changes
 # Correct the installation SQL with the summary changes
